# mock-interview-with-ai

./: .gitignore  .pre-commit-config.yaml  package.json  readme.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: config.py  dependenices.py  main.py
backend/app/db/: pg_conn.py  redis.py  supabase.py
backend/app/inngest/: client.py
backend/app/inngest/functions/: evaluate_answer.py  transcription.py
backend/app/llm/: config.py  redis_memory.py
backend/app/models/: interview_session.py  user.py
backend/app/router/: auth.py  interviews.py  upload_files.py
backend/app/services/: constants.py  jwt_service.py  queue.py  speech_to_text.py
frontend/: README.md  eslint.config.mjs  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(home)/: FAQSection.tsx  HeroSection.tsx  HowItWorks.tsx  ReactQueryProvider.tsx  TestimonialSection.tsx  page.tsx
frontend/src/app/dashboard/: layout.tsx
frontend/src/app/dashboard/create-interview/: page.tsx
frontend/src/app/dashboard/interview/: page.tsx
frontend/src/app/dashboard/past-interviews/: page.tsx
frontend/src/components/: MicPermissionDialog.tsx  app-sidebar.tsx  nav-main.tsx  nav-user.tsx  site-header.tsx
frontend/src/components/dashboard/: JobTemplateDialog.tsx
frontend/src/components/layout/: Footer.tsx  Navbar.tsx  SidebarWrapper.tsx
frontend/src/constants/: jobTemplates.ts
frontend/src/context/: userContext.tsx
frontend/src/http/: api.ts
frontend/src/lib/: utils.ts
frontend/src/types/: interview.types.ts  user.types.ts
(+3 files in other folders)
